express-connection and margin for journal

--- a/package.json
+++ b/package.json
@@ -2,12 +2,14 @@
   "name": "tradingjournal",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:5000",
   "dependencies": {
     "@hapi/joi": "^17.1.1",
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.1.2",
     "@testing-library/user-event": "^12.2.2",
     "antd": "^4.8.4",
+    "axios": "^0.21.0",
     "body-parser": "^1.19.0",
     "chart.js": "^2.9.4",
     "monk": "^7.3.2",
