--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "server": "nodemon src/server.js"
+    "server": "nodemon DB/server.js"
   },
   "eslintConfig": {
     "extends": [
